--- a/system_server/CMakeLists.txt
+++ b/system_server/CMakeLists.txt
@@ -135,7 +135,8 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/teste.cpp src/dao/generalDao.cpp)
+FILE(GLOB MyCPPSources src/dao/*.cpp)
+add_executable(${PROJECT_NAME}_node src/teste.cpp ${MyCPPSources})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
