--- a/system_server/CMakeLists.txt
+++ b/system_server/CMakeLists.txt
@@ -120,6 +120,7 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  /src/controller
   /src/dao
   /src/model
 )
@@ -137,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-FILE(GLOB MyCPPSources src/dao/*.cpp src/model/*.cpp)
+FILE(GLOB MyCPPSources src/dao/*.cpp src/model/*.cpp src/controller/*.cpp)
 add_executable(${PROJECT_NAME}_node src/teste.cpp ${MyCPPSources})
 
 ## Rename C++ executable without prefix
