--- a/system_client/package.xml
+++ b/system_client/package.xml
@@ -53,6 +53,7 @@
   <build_depend>move_base_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>libmysqlcppconn-dev</build_depend>
 
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>move_base_msgs</build_export_depend>
@@ -62,11 +63,12 @@
   <exec_depend>move_base_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-
+  <exec_depend>cmake_modules</exec_depend>
+  <exec_depend>libmysqlcppconn-dev</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <cpp lflags="-lmysqlcppconn"/>
+    <cpp iflags="-I/usr/local/include -I/usr/local/include/cppconn"/>
   </export>
 </package>
