msg to system_server

--- a/system_server/package.xml
+++ b/system_server/package.xml
@@ -50,6 +50,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
 
@@ -58,6 +59,7 @@
 
   <exec_depend>cmake_modules</exec_depend>
   <exec_depend>libmysqlcppconn-dev</exec_depend>
+   <exec_depend>message_runtime</exec_depend>
 
   <export>
     <cpp lflags="-lmysqlcppconn"/>
