--- a/p3dx_navigation/param/costmap_common_params.yaml
+++ b/p3dx_navigation/param/costmap_common_params.yaml
@@ -1,8 +1,8 @@
-obstacle_range: 3.0
-raytrace_range: 3.5
+obstacle_range: 2.5
+raytrace_range: 3.0
 
-#footprint: [[-0.105, -0.105], [-0.105, 0.105], [0.041, 0.105], [0.041, -0.105]]
-robot_radius: 0.25
+footprint: [[0.35, 0.0], [0.0, 0.25], [-0.35, 0.0], [0.0, -0.25]]
+#robot_radius: 0.25
 
 inflation_radius: 0.1
 cost_scaling_factor: 1.0
