--- a/p3dx_navigation/param/dwa_local_planner_params.yaml
+++ b/p3dx_navigation/param/dwa_local_planner_params.yaml
@@ -24,10 +24,11 @@ DWAPlannerROS:
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
-  sim_time: 2.5
+  sim_time: 3.0
   vx_samples: 20
   vy_samples: 0
   vth_samples: 40
+  sim_granularity: 0.025
   controller_frequency: 10.0
 
 # Trajectory Scoring Parameters
