--- a/p3dx_navigation/param/global_costmap_params.yaml
+++ b/p3dx_navigation/param/global_costmap_params.yaml
@@ -5,7 +5,7 @@ global_costmap:
   update_frequency: 5.0
   publish_frequency: 5.0
   transform_tolerance: 1.0
-
+  resolution: 0.05
   static_map: true
 
   laser/scan: {data_type: LaserScan, marking: false, clearing: false}
