--- a/system_client/CMakeLists.txt
+++ b/system_client/CMakeLists.txt
@@ -158,7 +158,7 @@ FILE(
   src/navigation/*.cpp
 )
 add_executable(${PROJECT_NAME}_node src/main.cpp ${MyCPPSourcesa})
-
+add_executable(${PROJECT_NAME}_echo src/echo.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -169,13 +169,16 @@ add_executable(${PROJECT_NAME}_node src/main.cpp ${MyCPPSourcesa})
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_generate_messages_cpp)
-
+add_dependencies(${PROJECT_NAME}_echo ${PROJECT_NAME}_generate_messages_cpp)
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
   mysqlcppconn
 )
-
+target_link_libraries(${PROJECT_NAME}_echo
+  ${catkin_LIBRARIES}
+  mysqlcppconn
+)
 
 #############
 ## Install ##
