compute distances done

--- a/system_server/package.xml
+++ b/system_server/package.xml
@@ -49,17 +49,21 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-
+  <build_depend>tf</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>libmysqlcppconn-dev</build_depend>
 
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
+
   <exec_depend>cmake_modules</exec_depend>
   <exec_depend>libmysqlcppconn-dev</exec_depend>
-   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>tf</exec_depend>
+  <exec_depend>roscpp</exec_depend>
 
   <export>
     <cpp lflags="-lmysqlcppconn"/>
